--- a/authentication-service/package.json
+++ b/authentication-service/package.json
@@ -9,11 +9,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.115",
     "@types/jsonwebtoken": "^9.0.2",
     "serverless-plugin-typescript": "^2.1.4",
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "jsonwebtoken": "^9.0.0"
+    "@aws-sdk/client-dynamodb": "^3.329.0",
+    "@aws-sdk/lib-dynamodb": "^3.329.0",
+    "@middy/core": "^4.4.0",
+    "@middy/http-cors": "^4.4.0",
+    "@middy/http-error-handler": "^4.4.0",
+    "@middy/http-event-normalizer": "^4.4.0",
+    "@middy/http-json-body-parser": "^4.4.0",
+    "jsonwebtoken": "^9.0.0",
+    "serverless-iam-roles-per-function": "^3.2.0"
   }
 }
