--- a/authentication-service/tsconfig.json
+++ b/authentication-service/tsconfig.json
@@ -1,14 +1,15 @@
-	
 {
-    "compilerOptions": {
-      "preserveConstEnums": true,
-      "strictNullChecks": true,
-      "sourceMap": true,
-      "allowJs": true,
-      "target": "es5",
-      "outDir": ".build",
-      "moduleResolution": "node",
-      "lib": ["es2015"],
-      "rootDir": "./"
-    }
-  }
+  "compilerOptions": {
+    "preserveConstEnums": true,
+    "strictNullChecks": true,
+    "sourceMap": true,
+    "allowJs": true,
+    "target": "es5",
+    "outDir": ".build",
+    "moduleResolution": "node",
+    "lib": ["es2015"],
+    "rootDir": "./",
+    "esModuleInterop": true
+  },
+  "exclude": ["node_modules"]
+}
