work on billing and step function

--- a/orders-service/iam/AuctionTableIAM.yml
+++ b/orders-service/iam/AuctionTableIAM.yml
@@ -4,7 +4,10 @@ AuctionsTableGetAuctionsIAM:
     - dynamodb:Query
   Resource:
     - ${self:custom.AuctionsTable.arn}
-    - !Join [
-        "/",
-        ["${self:custom.AuctionsTable.arn}", "index", "StatusAndEndDate"],
-      ]
+
+AuctionsTableUpdateAuctionsIAM:
+  Effect: Allow
+  Action:
+    - dynamodb:Update
+  Resource:
+    - ${self:custom.AuctionsTable.arn}
