--- a/orders-service/serverless.yml
+++ b/orders-service/serverless.yml
@@ -2,6 +2,8 @@ service: orders-service
 
 frameworkVersion: "3"
 
+useDotenv: true
+
 provider:
   name: aws
   runtime: nodejs18.x
@@ -22,10 +24,11 @@ plugins:
   - serverless-plugin-typescript
   - serverless-iam-roles-per-function
   - serverless-step-functions
+  - serverless-dotenv-plugin
 
 functions:
-  # orderReceiptPDF:
-  #   handler: src/handlers/orderReceiptPDF.handler
+  orderReceiptPDF:
+    handler: src/handlers/orderReceiptPDF.handler
   # url:
   #   cors: true # I am not adding this because I am already making it URL from this resource "OrderReceiptDownloadPdfUrl"
   checkInventory:
@@ -36,13 +39,37 @@ functions:
     handler: src/handlers/calculateTotal.handler
   redeemPoints:
     handler: src/handlers/redeemPoints.handler
+    iamRoleStatements:
+      - ${file(./iam/AuthenticationTableIAM.yml):AuthenticationTableUpdateItemIAM}
+      - ${file(./iam/AuthenticationTableIAM.yml):AuthenticationTableGetItemIAM}
+  billCustomer:
+    handler: src/handlers/billCustomer.handler
+  restoreRedeemPoints:
+    handler: src/handlers/restoreRedeemPoints.handler
+    iamRoleStatements:
+      - ${file(./iam/AuthenticationTableIAM.yml):AuthenticationTableUpdateItemIAM}
+  sqsWorker:
+    handler: src/handlers/sqsWorker.handler
+    iamRoleStatements:
+      - ${file(./iam/AuctionTableIAM.yml):AuctionsTableUpdateAuctionsIAM}
+    # triggered by sqs
+    events:
+      - sqs:
+          arn: !GetAtt OrdersQueue.Arn
+          # lambda will only pick one message from the queue if batchSize 1
+          batchSize: 1
+  restoreQuantity:
+    handler: src/handlers/restoreQuantity.handler
+    iamRoleStatements:
+      - ${file(./iam/AuctionTableIAM.yml):AuctionsTableUpdateAuctionsIAM}
 
-# resources:
-#   Resources:
-# OrderReceiptDownloadPdfUrl: ${file(./resources/OrderReceiptDownloadPdfUrl.yml):OrderReceiptDownloadPdfUrl}
-# PermissionForURLInvoke: ${file(./resources/OrderReceiptDownloadPdfUrl.yml):PermissionForURLInvoke}
-# CloudFrontCachePolicy: ${file(./resources/CloudFront.yml):CloudFrontCachePolicy}
-# CloudFrontDistribution: ${file(./resources/CloudFront.yml):CloudFrontDistribution}
+resources:
+  Resources:
+    # OrderReceiptDownloadPdfUrl: ${file(./resources/OrderReceiptDownloadPdfUrl.yml):OrderReceiptDownloadPdfUrl}
+    # PermissionForURLInvoke: ${file(./resources/OrderReceiptDownloadPdfUrl.yml):PermissionForURLInvoke}
+    # CloudFrontCachePolicy: ${file(./resources/CloudFront.yml):CloudFrontCachePolicy}
+    # CloudFrontDistribution: ${file(./resources/CloudFront.yml):CloudFrontDistribution}
+    OrdersQueue: ${file(./resources/OrdersQueue.yml):OrdersQueue)}
 
 stepFunctions:
   stateMachines:
@@ -86,6 +113,8 @@ stepFunctions:
             Type: Task
             Resource:
               Fn::GetAtt: [redeemPoints, Arn]
+            # so prev total will be replaced by new total which has points as well
+            ResultPath: "$.total"
             Catch:
               # States.ALL means match with all errors general error handling because we have not given error names in lambda function as well
               - ErrorEquals: [States.ALL]
@@ -93,11 +122,69 @@ stepFunctions:
             Next: BillCustomer
           BillCustomer:
             Type: Task
+            # must specify ResultPath otherwise function result will replace all input object
+            ResultPath: "$.billingStatus"
+            # retry the state
+            Retry:
+              - ErrorEquals: [States.ALL]
+                MaxAttempts: 3
+            # if it didnot work in the third time so catch the error
+            Catch:
+              - ErrorEquals: [States.ALL]
+                # ResultPath so result doesnot replace entire input state
+                # so to keep all other inputs intact
+                ResultPath: "$.customerBilling"
+                Next: billingError
             Resource:
               Fn::GetAtt: [billCustomer, Arn]
             Next: PrepareOrder
-          # PrepareOrder:
-
+          PrepareOrder:
+            # add it to sqs queue
+            # then a lambda worker attach it to the sqs queue
+            # and lambda worker will pick up a message
+            # and a find a proper courier and attach the courier information
+            # let say its info is courier email to dispatch an email to the courier
+            # wait for out state machine until task is completed
+            # so i will use callback pattern
+            # attach task token to the message we are sending to sqs queue
+            # and once lambda completed its task it will callback with task task token
+            # then state machine when it will receive callback will move to next state
+            Type: Task
+            # Resource is particular to state and step function not arn
+            # arn:aws:states:::sqs:sendMessage is resource related to state machine
+            # suffix task token = waitForTaskToken
+            # if u dont add waitForTaskToken its not going to wait make sure u add that
+            Resource: arn:aws:states:::sqs:sendMessage.waitForTaskToken
+            # ResulltPath because we are returning something from output object from sqsWorker
+            ResulltPath: "$.courierStatus"
+            Parameters:
+              QueueUrl: !Ref OrdersQueue
+              MessageBody:
+                # $ represents entire message object in body of message
+                Input.$: "$"
+                # associate the task token
+                # $$ indicates context object of state machine
+                Token.$: "$$.Task.Token" # From the context
+              # attach lamda worker that consumes the messages from sqs queue
+            Catch:
+              - ErrorEquals: [NoCourierAvailable]
+                ResultPath: "$.courierError"
+                Next: refundCustomer
+            Next: DispatchOrder
+          refundCustomer:
+            Type: Pass
+            Result: "Customer is refunded"
+            ResultPath: "$.refundStatus"
+            Next: restoreQuantity
+          restoreQuantity:
+            Type: Task
+            Resource:
+              Fn::GetAtt: [restoreQuantity, Arn]
+            Next: restoreRedeemPoints
+            Catch:
+              - ErrorEquals: [States.ALL]
+                ResultPath: "$.restoreQuantityError"
+                Next: restoreQuantityError
           auctionNotFoundError:
             Type: Pass
             Result: "No such auction found"
@@ -110,6 +197,20 @@ stepFunctions:
             Type: Pass
             Result: "Error in redeeming points"
             End: true
+          billingError:
+            Type: Pass
+            Result: "Billing error"
+            ResultPath: "$.billingStatus"
+            Next: restoreRedeemPoints
+          restoreRedeemPoints:
+            Type: Task
+            Resource:
+              Fn::GetAtt: [restoreRedeemPoints, Arn]
+            End: true
+          restoreQuantityError:
+            Type: Pass
+            Result: "Quantity couldnot be restored"
+            End: true
 
 custom:
   AuctionsTable:
@@ -121,3 +222,6 @@ custom:
     arn: ${cf:authentication-service-${sls:stage}.AuthenticationTableArn}
   AuctionsBucket:
     name: auctions-bucket-sdsjj32kjds-${self:provider.stage}
+  OrdersQueue:
+    name: OrdersQueue-${sls:stage}
+    arn: !GetAtt OrdersQueue.Arn
