Complete step functions workflows,sns topic

--- a/orders-service/resources/OrdersQueue.yml
+++ b/orders-service/resources/OrdersQueue.yml
@@ -1,5 +1,4 @@
 OrdersQueue:
   Type: AWS::SQS::Queue
   Properties:
-    FifoQueue: false #use standard queue
-    QueueName: { self:custom.OrdersQueue.name }
+    QueueName: ${self:custom.OrdersQueue.name}
