--- a/orders-service/iam/AuctionTableIAM.yml
+++ b/orders-service/iam/AuctionTableIAM.yml
@@ -8,6 +8,6 @@ AuctionsTableGetAuctionsIAM:
 AuctionsTableUpdateAuctionsIAM:
   Effect: Allow
   Action:
-    - dynamodb:Update
+    - dynamodb:UpdateItem
   Resource:
     - ${self:custom.AuctionsTable.arn}
