--- a/orders-service/resources/CloudFront.yml
+++ b/orders-service/resources/CloudFront.yml
@@ -19,12 +19,109 @@ CloudFrontCachePolicy:
         QueryStringsConfig:
           QueryStringBehavior: all
 
+WebACL: # should be in region 1
+  Type: AWS::WAFv2::WebACL
+  Properties:
+    Name: AuctionWebACL
+    Scope: CLOUDFRONT # or REGIONAL
+    Description: WebACL of auction service cloudfront
+    VisibilityConfig:
+      SampledRequestsEnabled: true
+      CloudWatchMetricsEnabled: true
+      MetricName: AuctionWebACLMetric
+    DefaultAction:
+      # The action to perform if none of the Rules contained in the WebACL match
+      # means legit requests in the context of our application
+      Allow: {}
+    Rules:
+      - Name: AuctionGeolocationRule # 2 capacity units
+        Priority: 6
+        Action:
+          Block: {}
+        Statement:
+          GeoMatchStatement:
+            # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-wafv2-webacl-geomatchstatement.html#cfn-wafv2-webacl-geomatchstatement-countrycodes
+            CountryCodes:
+              - US
+              - CN
+        VisibilityConfig:
+          SampledRequestsEnabled: true
+          CloudWatchMetricsEnabled: true
+          MetricName: AnonymousIPRuleMetric
+      - Name: RateBasedRule # 2 capacity units
+        Priority: 2
+        Action:
+          Block: {}
+        Statement:
+          RateBasedStatement:
+            AggregateKeyType: IP # Aggregate the request counts on the IP address from the web request origin.
+            # how many requests should i allow from a single IP address within 5 minutes else ip will be blocked
+            # should be between 100 and 20 million
+            Limit: 1000
+        VisibilityConfig:
+          SampledRequestsEnabled: true
+          CloudWatchMetricsEnabled: true
+          MetricName: AnonymousIPRuleMetric
+      # https://docs.aws.amazon.com/waf/latest/developerguide/aws-managed-rule-groups-list.html
+      # https://www.serverlessguru.com/blog/connecting-aws-waf-to-api-gateway-via-serverless-framework
+      - Name: IPReputationRule
+        Priority: 1
+        Action:
+          Block: {}
+        Statement:
+          ManagedRuleGroupStatement:
+            VendorName: AWS
+            Name: AWSManagedRulesAmazonIpReputationList
+        VisibilityConfig:
+          SampledRequestsEnabled: true
+          CloudWatchMetricsEnabled: true
+          MetricName: AnonymousIPRuleMetric
+      - Name: AnonymousIPRule
+        Priority: 3
+        Action:
+          Block: {}
+        Statement:
+          ManagedRuleGroupStatement:
+            VendorName: AWS
+            Name: AWSManagedRulesAmazonIpReputationList
+        VisibilityConfig:
+          SampledRequestsEnabled: true
+          CloudWatchMetricsEnabled: true
+          MetricName: AnonymousIPRuleMetric
+      # CoreRuleSet provides protection against OWASP and prevents wide range of vunerabilities
+      - Name: CoreRuleSet
+        Priority: 4
+        Action:
+          Block: {}
+        Statement:
+          ManagedRuleGroupStatement:
+            VendorName: AWS
+            Name: AWSManagedRulesCommonRuleSet
+        VisibilityConfig:
+          SampledRequestsEnabled: true
+          CloudWatchMetricsEnabled: true
+          MetricName: CoreRuleSetMetric
+      - Name: KnownBadInputsRule
+        Priority: 5
+        Action:
+          Block: {}
+        Statement:
+          ManagedRuleGroupStatement:
+            VendorName: AWS
+            Name: AWSManagedRulesKnownBadInputsRuleSet
+        VisibilityConfig:
+          SampledRequestsEnabled: true
+          CloudWatchMetricsEnabled: true
+          MetricName: KnownBadInputsRuleMetric
+
 # cloudfront distribution
 CloudFrontDistribution:
   Type: AWS::CloudFront::Distribution
   Properties:
     DistributionConfig:
       Enabled: true
+      # cloudfront protected by waf
+      # WebACLId: !GetAtt WebACL.Id
       DefaultCacheBehavior:
         TargetOriginId: orderReceiptPDF
         # how client access cloudfront
