--- a/auction-service/package.json
+++ b/auction-service/package.json
@@ -16,6 +16,7 @@
     "@types/uuid": "^9.0.1",
     "aws-lambda": "^1.0.7",
     "serverless-apigateway-service-proxy": "^2.2.1",
+    "serverless-dotenv-plugin": "^6.0.0",
     "serverless-iam-roles-per-function": "^3.2.0",
     "serverless-plugin-typescript": "^2.1.4",
     "typescript": "^5.0.4"
@@ -26,6 +27,7 @@
     "@aws-sdk/client-s3": "^3.327.0",
     "@aws-sdk/client-sqs": "^3.321.1",
     "@aws-sdk/lib-dynamodb": "^3.321.1",
+    "@aws-sdk/s3-request-presigner": "^3.332.0",
     "@middy/core": "^4.4.0",
     "@middy/http-cors": "^4.4.0",
     "@middy/http-error-handler": "^4.4.0",
