--- a/auction-service/tsconfig.json
+++ b/auction-service/tsconfig.json
@@ -1,17 +1,15 @@
 {
-    "compilerOptions": {
-      "preserveConstEnums": true,
-      "strictNullChecks": true,
-      "sourceMap": true,
-      "allowJs": true,
-      "target": "es5",
-      "outDir": ".build",
-      "moduleResolution": "node",
-      "lib": ["es2015"],
-      "rootDir": "./",
-      "esModuleInterop": true
-    },
-    "exclude": [
-      "node_modules"
-    ]
-  }
+  "compilerOptions": {
+    "preserveConstEnums": true,
+    "strictNullChecks": true,
+    "sourceMap": true,
+    "allowJs": true,
+    "target": "es5",
+    "outDir": ".build",
+    "moduleResolution": "node",
+    "lib": ["es2015"],
+    "rootDir": "./",
+    "esModuleInterop": true
+  },
+  "exclude": ["**/*.spec.ts", "**/*.test.ts", "node_modules"]
+}
